fix: apply dark mode to markdown table (#862)

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,7 @@
 .light-mode {
   --primary-color: #384aff;
   --bg-color: white;
+  --bg-darker-color: #f6f8fa;
   --text-color: #57606a;
   --link-color: #111111;
   --heading-color: #111111;
@@ -20,6 +21,7 @@
 .eth-dark-mode {
   --primary-color: #384aff;
   --bg-color: #121212;
+  --bg-darker-color: #222222;
   --text-color: #8b949e;
   --link-color: #ffffff;
   --heading-color: #ffffff;
